<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:onClick="backToHome">
            </ImageView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/PendingOrders"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/primary_yellow"
            android:gravity="center">
        </TextView>

    </LinearLayout>

    <!--        Table header-->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:minHeight="50dp"
            android:gravity="center">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/PendingOrders_order_id"
                android:fontFamily="@font/poppins_regular"
                android:textSize="20sp"
                android:textColor="@color/primary_yellow"
                android:layout_column="2">
            </TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/PendingOrders_name"
                android:fontFamily="@font/poppins_regular"
                android:textSize="20sp"
                android:textColor="@color/primary_yellow"
                android:layout_column="3">
            </TextView>

        </TableRow>


    </TableLayout>

    <!--    Table Body loop-->
    <ListView
        android:id="@+id/LV_pending_orders"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:scrollbars="vertical">




    </ListView>

</LinearLayout>