<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:onClick="backToOrderMenu">
            </ImageView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/ConfirmOrder"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/primary_yellow"
            android:gravity="center">
        </TextView>

    </LinearLayout>

    <!--        Table header-->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:minHeight="50dp"
            android:gravity="center">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/ConfirmOrder_name"
                android:fontFamily="@font/poppins_regular"
                android:textSize="20sp"
                android:textColor="@color/primary_yellow"
                android:layout_column="2">
            </TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ConfirmOrder_price"
                android:fontFamily="@font/poppins_regular"
                android:textSize="20sp"
                android:textColor="@color/primary_yellow"
                android:layout_column="3">
            </TextView>

        </TableRow>


    </TableLayout>

    <!--    Table Body loop-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:scrollbars="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--        Table body Loop-->
            <TableRow
                android:layout_width="match_parent"
                android:minHeight="50dp"
                android:gravity="center">

            <TextView
                android:id="@+id/product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="@font/poppins_regular"
                android:textSize="20sp"
                android:textColor="@color/primary_black"
                android:layout_column="1">
            </TextView>

            <TextView
                android:id="@+id/product_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                android:textSize="20sp"
                android:textColor="@color/primary_black"
                android:layout_column="2">
            </TextView>

            </TableRow>

        </TableLayout>


    </ScrollView>

    <EditText
        android:id="@+id/order_qty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:hint="Enter Product Qty"
        android:fontFamily="@font/poppins_regular">
    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="@drawable/bg_black_ovel"
        android:backgroundTint="@color/primary_black"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="15dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:text="@string/ConfirmOrder_btn_confirm_order"
        android:textSize="10sp"
        android:onClick="confirmPurchase">
    </Button>

    <TextView
        android:id="@+id/product_id"
        android:layout_width="0dp"
        android:layout_height="0dp">
    </TextView>

</LinearLayout>